--- a/style.css
+++ b/style.css
@@ -40,16 +40,25 @@ body {
 
 .subtitle {
   font-size: 8px;
-  margin-top: 10px;
+  margin-top: 50px;
   line-height: 1.5;
   max-height: 100px;
   overflow-y: auto;
   white-space: normal;
-  text-align: left;
+  text-align: center;
   padding-right: 4px;
   scroll-behavior: smooth;
   color: #00ffee;
   text-shadow: 0 0 2px #0ff;
+}
+
+/* Efek Berkedip */
+.blink {
+  animation: blink 1s infinite;
+}
+@keyframes blink {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0.2; }
 }
 
 .subtitle:focus {
